# SVGAPlayer-Gdip

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  CMakeSettings.json  ImageEngine_t.cpp  SvgaLib.cpp  SvgaLib.h  SvgaLoader.cpp  SvgaLoader_t.cpp  SvgaPrivate.h  SvgaVideoSpriteFrame_t.cpp  SvgaVideoSprite_t.cpp  SvgaVideo_t.cpp  dllmain.cpp  options_IImageEngineSingleton_t.h  options_ImageEngineGdip_t.hpp  options_dllmain.cpp  options_gdip.hpp  options_interface.h  svga.pb.cc  svga.pb.h
